# OutlookHandler

./: .gitignore  README.md  setup.cfg  setup.py
local_test/: testing_routine.py
src/: MailReader.py  OutlookHandler.py
src/easy_outlook/: __init__.py  wrappers.py
