[metadata]
name = easy outlook
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = 0.1.3
description = Wrapper of win32com/pywin32 library for easier use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/easy_outlook
license_files = LICENSE
keywords = outlook, outlook wrapper
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.10
install_requires =
    pywin32

[options.packages.find]
where=src